--- a/FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-erudio/pom.xml
+++ b/FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-erudio/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>19</java.version>
+		<dozer.version>6.4.0</dozer.version>
+<!--		<model-mapper.version>3.1.1</model-mapper.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,6 +36,16 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.dozermapper</groupId>
+			<artifactId>dozer-core</artifactId>
+			<version>${dozer.version}</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.modelmapper</groupId>-->
+<!--			<artifactId>modelmapper</artifactId>-->
+<!--			<version>${model-mapper.version}</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
